Fix stretching of bio images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -491,7 +491,7 @@ ul#team li {
 	list-style-type: none;
 }
 ul#team li img {
-	width: 200px;
+	width: 220px;
 	height: 200px;
 	float: left;
 	padding-right: 20px;
